--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     <link href="style.css" rel="stylesheet">
     <script defer src="script.js"></script>
     <title>JavaQuizApp</title>
-   
-</head>
+  </head>
+
+
   
+<div class="timer">
+  <div class="timer-sec">10</div>
+</div>
   <div class="container-fluid">
       <button class="btn btn-outline-success" type="submit">High Scores</button>
   </div>
