--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <script defer src="script.js"></script>
     <title>JavaQuizApp</title>
   </head>
-
+  
 
   
 <div class="timer">
-  <div class="timer-sec">10</div>
+  <div id="time" class="timer-sec">10</div>
 </div>
   <div class="container-fluid">
       <button class="btn btn-outline-success" type="submit">High Scores</button>
