--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   
 <div class="timer">
-  <div id="time" class="timer-sec">10</div>
+  <div id="time" class="timer-sec"></div>
 </div>
   <div class="container-fluid">
       <button class="btn btn-outline-success" type="submit">High Scores</button>
