added to the second.html

--- a/second.html
+++ b/second.html
@@ -8,6 +8,13 @@
     <script defer src="script.js"></script>
 </head>
 <body>
+
+ 
+    <div class="container">
+        <div id="question-container" class="hide">
+          
+          </div>
+        </div>
     
 </body>
 </html>
