after much experimenting, added logo gif

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div id="time" class="timer-sec">00:00</div>
 </div>
   <div class="container-fluid">
-      <button class="btn btn-outline-success" type="submit">High Scores</button>
+      <a class="btn btn-outline-success-link active" href="second.html">High Scores</a>
   </div>
 
 
@@ -23,7 +23,7 @@
     <span class="letters letters-2">Set</span>
     <span class="letters letters-3">Go!</span>
   </h1>
-  
+
 
 
 
