--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <script defer src="script.js"></script>
     <title>JavaQuizApp</title>
   </head>
-  
+ <body>
 
+  <div class="header">
+    <img src="ezgif.com-gif-maker.gif" width="150" height="150"  alt="conejo">
+</div>
   
 <div class="timer">
   <div id="time" class="timer-sec">00:00</div>
