Lots of rewrites and erasing to figure out how to prompt at the answer of the last question and ask the user for name to keep for the locla data storage. Unfortunately, I didnt get as far as I'd like to. This was a learning experience for sure. I Hope to get an extension on it so I can complete it

--- a/second.html
+++ b/second.html
@@ -29,7 +29,7 @@
                 </div>
                 <input type="text" class="form-control">
                 <input type="text" class="form-control">
-                <button type="button" class="btn btn-secondary btn-lg">Submit Name</button>
+                <a type="button" class="btn btn-secondary btn-lg" href="index.html">Submit Name</a>
               </div>  
               <div class="display">
                 <div id="score" class="score-display">0</div>
