--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>quiz</title>
-	<link rel="stylesheet" href="./assets/style.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
     <!-- Game Container -->
@@ -44,6 +44,6 @@
 		</div>
 		</div>
 	</div>
-	<script src="./assets/script.js"></script>
+	<script src="script.js"></script>
 </body>
 </html>
